[package]
name = "salvo-cli"
version = "0.1.52"
authors = ["Fankai Liu <liufankai137@outlook.com>", "mrxiaozhuox <mrxzx.info@gmail.com>", "Chrislearn Young <chris@acroidea.com>"]
edition = "2021"
rust-version = "1.80"
readme = "./README.md"
keywords = ["salvo", "cli", "template"]
description = "Cli for the Salvo web framework, creates clean, easy-to-read code, saving you time for the more enjoyable aspects of life."
license = "MIT OR Apache-2.0"
repository = "https://github.com/salvo-rs/salvo-cli"

[[bin]]
name = "salvo"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
git2 = "0.20"
itertools = "0.14"
liquid = "0.26"
once_cell = "1.20"
reqwest = "0.12"
rust-embed = { version = "8" }
rust-i18n = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
unicode-xid = "0.2"
walkdir = "2.5"
