[package]
name = "salvo-cli"
version = "0.2.0"
authors = ["Fankai Liu <liufankai137@outlook.com>", "mrxiaozhuox <mrxzx.info@gmail.com>", "Chrislearn Young <chris@acroidea.com>"]
edition = "2024"
rust-version = "1.89"
readme = "./README.md"
keywords = ["salvo", "cli", "template"]
description = "Cli for the Salvo web framework, creates clean, easy-to-read code, saving you time for the more enjoyable aspects of life."
license = "MIT OR Apache-2.0"
repository = "https://github.com/salvo-rs/salvo-cli"

[[bin]]
name = "salvo"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
dialoguer = "0.12.0"
git2 = "0.20.2"
itertools = "0.14.0"
liquid = "0.26.11"
once_cell = "1.21.3"
reqwest = "0.12.24"
rust-embed = { version = "8.8.0" }
rust-i18n = "3.1.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
unicode-xid = "0.2.6"
walkdir = "2.5.0"
